--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,8 +43,7 @@ jobs:
         run: |
           cd $GITHUB_WORKSPACE/src
           chmod +x gradlew
-          ./gradlew make
-          ./gradlew makePluginsJson
+          ./gradlew make makePluginsJson
           cp **/build/*.cs3 $GITHUB_WORKSPACE/builds
           cp build/plugins.json $GITHUB_WORKSPACE/builds
 
